Change input type to password

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                                     <input type="hidden" name="u" value="503bdae81fde8612ff4944435">
                                     <input type="hidden" name="id" value="bfdba52708">
                                     <div class="form-group">
-                                        <input class="form-control input-lg" name="MERGE1" id="name" type="text" placeholder="Email address" required>
+                                        <input class="form-control input-lg" name="MERGE1" id="email" type="email" placeholder="Email address" required>
                                     </div>
                                     <div class="form-group">
-                                        <input class="form-control input-lg" name="MERGE0" id="email" type="email" placeholder="Password" required>
+                                        <input class="form-control input-lg" name="MERGE0" id="password" type="password" placeholder="Password" required>
                                     </div>
                                     <div class="form-group last">
                                         <input type="submit" class="btn btn-warning btn-block btn-lg" value="SUBSCRIBE">
