--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                             <div class="signup-header wow fadeInUp">
                                 <h3 class="form-title text-center">GET STARTED</h3>
-                                <form class="form-header" action="http://moxdesign.us10.list-manage.com/subscribe/post" role="form" method="POST" id="#">
+                                <form class="form-header" action="userHome.html" role="form" method="POST" id="#">
                                     <input type="hidden" name="u" value="503bdae81fde8612ff4944435">
                                     <input type="hidden" name="id" value="bfdba52708">
                                     <div class="form-group">
