Books catalog and link to pdf

--- a/userHome.html
+++ b/userHome.html
@@ -36,6 +36,7 @@
         <div id="menu">
             <nav class="navbar-wrapper navbar-default" role="navigation">
                 <div class="container">
+
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-backyard">
                             <span class="sr-only">Toggle navigation</span>
@@ -48,17 +49,163 @@
 
                     <div id="navbar-scroll" class="collapse navbar-collapse navbar-backyard navbar-right">
                         <ul class="nav navbar-nav">
-                            <li><a href="#intro">About</a></li>
-                            <li><a href="#feature">Features</a></li>
-                            <li><a href="#download">Download</a></li>
-                            <li><a href="#package">Pricing</a></li>
-                            <li><a href="#testi">Reviews</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="#contact">Hello, Akash</a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
         </div>
+
+        <!-- Page Content -->
+        <div class="container">
+
+        <div class="row">
+
+            <div class="col-md-10 col-sm-12 text-left feature-title">
+                <h3 class="page-header">Continue Reading</h1>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="pdf.html">
+                    <img class="img-responsive" src="images/books/b1.jpg" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+            
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b2.jpg" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b3.jpg" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+            <div class="col-md-10 col-sm-12 text-left feature-title">
+                <h3 class="page-header">Computer Science</h1>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b4.jpeg" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b5.png" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b6.jpg" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b7.jpg" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+            <div class="col-md-10 col-sm-12 text-left feature-title">
+                <h3 class="page-header">Mathematics</h1>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b8.jpg" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b9.jpg" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b10.jpg" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b11.png" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+            <div class="col-md-10 col-sm-12 text-left feature-title">
+                <h3 class="page-header">Biology</h1>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b12.jpg" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b13.jpg" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b14.png" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b15.jpg" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+            <div class="col-md-10 col-sm-12 text-left feature-title">
+                <h3 class="page-header">Entrepreneurship</h1>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b16.jpg" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b17.jpg" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b18.jpg" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="images/books/b19.jpg" alt="" style="width:400px;height:300px;">
+                </a>
+            </div>
+
+
+        </div>
+
+        <hr>
+
+
+
+
+
+
+
 
 
 
