--- a/pdf.html
+++ b/pdf.html
@@ -3,7 +3,7 @@
     <head>
 
         <!-- /.website title -->
-        <title>Backyard Landing Page</title>
+        <title>Reading Machine Learning: A Probabilistic Perspective</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
         <!-- CSS Files -->
@@ -40,6 +40,7 @@
         <div id="menu">
             <nav class="navbar-wrapper navbar-default" role="navigation">
                 <div class="container">
+
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-backyard">
                             <span class="sr-only">Toggle navigation</span>
@@ -47,17 +48,12 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand site-name" href="#top"><img src="images/logo2.png" alt="logo"></a>
+                        <a class="navbar-brand site-name" href="userHome.html"><img src="images/logo2.png" alt="logo"></a>
                     </div>
 
                     <div id="navbar-scroll" class="collapse navbar-collapse navbar-backyard navbar-right">
                         <ul class="nav navbar-nav">
-                            <li><a href="#intro">About</a></li>
-                            <li><a href="#feature">Features</a></li>
-                            <li><a href="#download">Download</a></li>
-                            <li><a href="#package">Pricing</a></li>
-                            <li><a href="#testi">Reviews</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="#contact">Hello, Akash</a></li>
                         </ul>
                     </div>
                 </div>
