BookWorm replaces Bookworm

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
 
         <!-- /.website title -->
-        <title>Bookworm</title>
+        <title>BookWorm</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
         <!-- CSS Files -->
@@ -51,7 +51,7 @@
 
                             <!-- /.header paragraph -->
                             <div class="landing-text wow fadeInUp">
-                                <p>Bookworm is an online subscription-based textbook hub that makes it easy for you to access the resources you need for school at a reasonable cost. Try now and join our happy customers!</p>
+                                <p>BookWorm is an online subscription-based textbook hub that makes it easy for you to access the resources you need for school at a reasonable cost. Try now and join our happy customers!</p>
                             </div>				  
 
                         </div> 
