--- a/userHome.html
+++ b/userHome.html
@@ -69,12 +69,14 @@
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                     <a class="thumbnail" href="pdf.html">
                         <img class="img-responsive" src="images/books/b1.jpg" alt="" style="width:400px;height:300px;">
+
                     </a>
                 </div>
                 
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                    <a class="thumbnail" href="#">
-                        <img class="img-responsive" src="images/books/b2.jpg" alt="" style="width:400px;height:300px;">
+                    <a class="thumbnail" href="#" style='background-color: transparent'>
+                        <img class="img-responsive" src="images/books/b2.png" alt="" style="width:400px;height:280px;">
+                        <div class="fa project-overlay" style='background-color: transparent'><small>Sponsored Ads</small></div>
                     </a>
                 </div>
 
