--- a/pdf.html
+++ b/pdf.html
@@ -14,9 +14,6 @@
         <link href="css/owl.theme.css" rel="stylesheet">
         <link href="css/owl.carousel.css" rel="stylesheet">
 
-        <script src="../../systemjs.config.js"></script>
-        <script src="js/hello.js"></script>
-
 
         <!-- Colors -->
         <link href="css/css-index.css" rel="stylesheet" media="screen">
@@ -83,6 +80,8 @@
             s.src = 'https://bookworm-1.disqus.com/embed.js';
             s.setAttribute('data-timestamp', +new Date());
             (d.head || d.body).appendChild(s);
+            t = document.getElementById("disqus_thread")
+            t.style.cssText = "width:90%; margin: 0px auto";
             })();
             </script>
             <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
